# Computer_Graphics

./: .gitattributes  .gitattributes.gitignore  .gitignore  README.md
.github/workflows/: cmake-multi-platform.yml
1_HF/Lines/: CMakeLists.txt
1_HF/Lines/src/: LineCollection.cpp  LineCollection.h  Object.cpp  PointCollection.cpp  PointCollection.h  Skeleton.cpp  Skeleton.h  framework.cpp  framework.h
2_HF/CurveEditor/: CMakeLists.txt
2_HF/CurveEditor/src/: BezierCurve.cpp  BezierCurve.h  Camera2D.cpp  Camera2D.h  CatmullRomSpline.cpp  CatmullRomSpline.h  LagrangeCurve.cpp  LagrangeCurve.h  Line.cpp  Line.h  Object.h  ParametricCurve.cpp  ParametricCurve.h  Skeleton.cpp  Skeleton.h  framework.cpp
3_HF/CircleLimit/: CMakeLists.txt
3_HF/CircleLimit/src/: ProceduralCircleLimitTexture.cpp  ProceduralCircleLimitTexture.h  Skeleton.cpp  Skeleton.h  Star.cpp  Star.h  framework.cpp
4_HF/RayTrace/: CMakeLists.txt
4_HF/RayTrace/src/: Camera3D.cpp  Camera3D.h  Cone.cpp  Cone.h  Cylinder.cpp  Cylinder.h  Plane.cpp  Plane.h  RayTraceFramework.h  Scene.cpp  Scene.h  Skeleton.cpp  Skeleton.h  TexturedQuad.cpp  TexturedQuad.h  framework.cpp  framework.h
